# a2a-registry

./: .impeccable-live.json  .impeccable.md  AGENTS.md  CLAUDE.md  DESIGN.json  DESIGN.md  GEMINI.md  PRODUCT.md  README.md  boost.json  composer.json  eslint.config.js  package-lock.json  package.json  phpunit.xml  skills-lock.json
.codex/: config.toml
.github/workflows/: release.yml  tests.yml
app/Enums/: AgentListingStatus.php
app/Models/: AgentListing.php  AgentListingRevision.php
config/: agent-registry.php  fortify.php
database/factories/: AgentListingFactory.php  AgentListingRevisionFactory.php
database/migrations/: 2026_04_23_033539_create_agent_listings_table.php  (+1 more)
database/schema/: sqlite-schema.sql
routes/: api.php  console.php  web.php
sdk/python/: README.md  pyproject.toml
sdk/python/a2a_registry_sdk/: __init__.py  registry_client.py
sdk/python/a2a_registry_sdk/api/agents/: get_agent.py  get_agent_card.py  list_agents.py
sdk/python/a2a_registry_sdk/models/: __init__.py  agent_card_capabilities.py  agent_card_envelope.py  agent_card_envelope_validation_warnings.py  agent_card_provider.py  agent_card_response.py  agent_card_security_scheme.py  agent_card_skill.py  agent_card_supported_interface.py  agent_card_v1.py  agent_card_v1_security_schemes_type_0.py  agent_card_v1_signatures_type_0.py  agent_card_v1_signatures_type_0_additional_property.py  agent_listing.py  agent_listing_response.py  agent_listing_status.py  api_key_security_scheme.py  error_response.py  http_auth_security_scheme.py  mutual_tls_security_scheme.py  o_auth_2_security_scheme.py  o_auth_2_security_scheme_flows.py  open_id_connect_security_scheme.py  paginated_agent_listing_response.py  pagination_links.py  pagination_meta.py  security_requirement.py  validation_error_response.py  validation_error_response_errors.py
(+79 files in other folders)
