[tool.poetry]
name = "a2a-registry-sdk"
version = "1.0.0"
description = "A client library for accessing A2A Registry API"
authors = []
packages = [
    { include = "a2a_registry_sdk" },
]
include = ["a2a_registry_sdk/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.23.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
