[tool.poetry]
name = "a2a-registry-sdk"
version = "1.0.0"
description = "Python client for the A2A Registry API — discover and browse registered A2A protocol agents."
authors = ["A2A Registry Contributors"]
license = "MIT"
repository = "https://github.com/rubybear-lgtm/a2a-registry"
homepage = "https://github.com/rubybear-lgtm/a2a-registry#readme"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
packages = [
    { include = "a2a_registry_sdk" },
]
include = ["a2a_registry_sdk/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.23.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
